charts/workflows/test-policy/workflow-label/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: userinfo-roles-clusterroles
spec:
  concurrent: false
  steps:
  - name: valid-posix
    try:
      - command:
          entrypoint: kubectl
          args:
            - auth
            - whoami
      - command:
          entrypoint: kubectl
          args:
            - apply
            - --filename=rbac.yaml
          check:
            ($error == null): true

      - command:
          args:
            - create
            - clusterrolebinding
            - impersonator
            - --clusterrole=allow-impersonation
            - --user=tester
          entrypoint: kubectl
          check:
            ($error == null): true
      
      # - command:
      #     args:
      #       - get
      #       - cpol
      #     entrypoint: kubectl

      - command:
          args:
          - create
          - --filename=workflow.yaml
          - --as=tester
          - --as-group=tester
          - --as-user-extra=workflows.diamond.ac.uk/posixuid=12345
          entrypoint: kubectl
          check:
            ($error == null): true
      - command:
          entrypoint: kubectl
          args:
            - get
            - workflows
            - -A
            - -oyaml

      - assert:
          resource:
            apiVersion: argoproj.io/v1alpha1
            kind: Workflow
            metadata:
              name: valid-posixuid
              labels:
                workflows.diamond.ac.uk/creator-posix-uid: "12345"
            spec: {}
